# ansible_azure_practice

./: README.md
Dockerized/: Dockerfile
ansible_azure/: README.md  cred_backup  play-azure-two.yaml  play-azure.yaml  pyproject.toml  runme.sh
ansible_azure/ansible_playbooks/: play-azure.yaml  play-components.yaml  play-create-rg.yaml  play-delete-rg.yaml
