[tool.poetry]
name = "ansible-azure"
version = "0.1.0"
description = ""
authors = ["trentonknight <trentonknight@gmail.com>"]
readme = "README.md"
packages = [{include = "ansible_azure"}]

[tool.poetry.dependencies]
python = "^3.10"
pywinrm = "^0.4.3"
requests = "^2.28.2"
ansible = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
